--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@react-email/components": "^0.0.25",
     "@types/nodemailer": "^6.4.16",
     "@types/qrcode": "^1.5.5",
+    "aws-amplify": "^6.7.0",
     "bcryptjs": "^2.4.3",
     "canvas": "^2.11.2",
     "canvas-confetti": "^1.9.3",
@@ -51,11 +52,11 @@
     "prisma": "^5.21.1",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.1.0",
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "react": "^18.3.1",
     "react-avatar": "^5.0.3",
     "react-circular-progressbar": "^2.1.0",
     "react-day-picker": "^9.2.1",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "^18.3.1",
     "react-email": "^3.0.1",
     "react-hook-form": "^7.53.1",
     "react-scroll-parallax": "^3.4.5",
@@ -70,18 +71,25 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.5.2",
+    "@aws-amplify/backend-cli": "^1.3.0",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "aws-cdk": "^2.164.1",
+    "aws-cdk-lib": "^2.164.1",
+    "constructs": "^10.4.2",
+    "esbuild": "^0.24.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
     "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.5",
-    "typescript": "^5"
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
   }
 }
