--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "core-js": "^3.39.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.10",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
-    "next-auth": "^4.24.10",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "ngx-qrcode-styling": "^1.3.2",
     "nodemailer": "^6.9.16",
@@ -83,7 +84,7 @@
     "aws-cdk-lib": "^2.164.1",
     "constructs": "^10.4.2",
     "esbuild": "^0.24.0",
-    "eslint": "^8",
+    "eslint": "^9.14.0",
     "eslint-config-next": "15.0.1",
     "jest": "^29.7.0",
     "postcss": "^8",
