--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@react-email/components": "^0.0.25",
+    "@stripe/stripe-js": "^4.9.0",
     "@types/nodemailer": "^6.4.16",
     "aws-amplify": "^6.7.0",
     "bcryptjs": "^2.4.3",
@@ -65,6 +66,7 @@
     "react-tooltip": "^5.28.0",
     "resend": "^4.0.0",
     "sonner": "^1.5.0",
+    "stripe": "^17.3.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.169.0",
