--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@react-email/components": "^0.0.25",
     "@stripe/stripe-js": "^4.9.0",
     "@types/nodemailer": "^6.4.16",
+    "@upstash/ratelimit": "^2.0.4",
+    "@upstash/redis": "^1.34.3",
     "aws-amplify": "^6.7.0",
     "bcryptjs": "^2.4.3",
     "canvas": "^2.11.2",
