--- a/package.json
+++ b/package.json
@@ -7,95 +7,76 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.7.2",
-    "@hello-pangea/dnd": "^17.0.0",
-    "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.21.1",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-form": "^0.1.0",
-    "@radix-ui/react-hover-card": "^1.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-scroll-area": "^1.2.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.1.3",
-    "@react-email/components": "^0.0.25",
-    "@stripe/stripe-js": "^4.9.0",
-    "@types/nodemailer": "^6.4.16",
-    "@upstash/ratelimit": "^2.0.4",
-    "@upstash/redis": "^1.34.3",
-    "aws-amplify": "^6.7.0",
+    "@auth/prisma-adapter": "^1.0.12",
+    "@hello-pangea/dnd": "^16.5.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.8.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@stripe/stripe-js": "^2.3.0",
+    "@upstash/ratelimit": "^1.0.0",
+    "@upstash/redis": "^1.28.0",
     "bcryptjs": "^2.4.3",
-    "canvas": "^2.11.2",
-    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "core-js": "^3.39.0",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^11.11.10",
-    "lucide-react": "^0.453.0",
-    "next": "15.0.1",
-    "next-auth": "^4.24.7",
-    "next-themes": "^0.3.0",
-    "ngx-qrcode-styling": "^1.3.2",
-    "nodemailer": "^6.9.16",
-    "prisma": "^5.21.1",
-    "qrcode": "^1.5.4",
-    "qrcode.react": "^4.1.0",
-    "react": "^18.3.1",
-    "react-avatar": "^5.0.3",
-    "react-circular-progressbar": "^2.1.0",
-    "react-day-picker": "^9.2.1",
-    "react-dom": "^18.3.1",
-    "react-email": "^3.0.1",
-    "react-hook-form": "^7.53.1",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.2.0",
+    "framer-motion": "^10.17.9",
+    "lucide-react": "^0.303.0",
+    "next": "14.0.4",
+    "next-auth": "^4.24.5",
+    "next-themes": "^0.2.1",
+    "qrcode": "^1.5.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-scroll-parallax": "^3.4.5",
-    "react-tiny-fab": "^4.0.4",
-    "react-tooltip": "^5.28.0",
-    "resend": "^4.0.0",
-    "sonner": "^1.5.0",
-    "stripe": "^17.3.1",
-    "tailwind-merge": "^2.5.4",
+    "resend": "^2.1.0",
+    "stripe": "^14.11.0",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.169.0",
-    "zod": "^3.23.8",
-    "zustand": "^5.0.0"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@aws-amplify/backend": "^1.5.2",
-    "@aws-amplify/backend-cli": "^1.3.0",
-    "@testing-library/jest-dom": "^6.6.2",
-    "@testing-library/react": "^16.0.1",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20",
+    "@aws-amplify/backend": "^0.8.0",
+    "@aws-amplify/backend-cli": "^0.9.0",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.6",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "aws-cdk": "^2.164.1",
-    "aws-cdk-lib": "^2.164.1",
-    "constructs": "^10.4.2",
-    "esbuild": "^0.24.0",
-    "eslint": "^9.14.0",
-    "eslint-config-next": "15.0.1",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "aws-cdk": "2.110.1",
+    "aws-cdk-lib": "2.110.1",
+    "constructs": "^10.3.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
-    "postcss": "^8",
+    "postcss": "^8.4.33",
+    "prisma": "^5.8.0",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.2.5",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
   }
 }
