--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,7 +13,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
     "@hello-pangea/dnd": "^16.5.0",
-    "@hookform/resolvers": "^3.3.4",
+    "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.8.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -37,6 +37,8 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.4",
+    "critters": "^0.0.25",
     "date-fns": "^3.2.0",
     "framer-motion": "^10.17.9",
     "lucide-react": "^0.303.0",
@@ -46,9 +48,10 @@
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
+    "react-hook-form": "^7.53.1",
     "react-scroll-parallax": "^3.4.5",
     "resend": "^2.1.0",
+    "sharp": "^0.33.5",
     "stripe": "^14.11.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
@@ -61,8 +64,8 @@
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.10.6",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.6",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
@@ -70,6 +73,7 @@
     "aws-cdk": "2.110.1",
     "aws-cdk-lib": "2.110.1",
     "constructs": "^10.3.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
