--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
+    "db:init": "tsx scripts/db-init.ts",
+    "db:migrate": "prisma migrate deploy",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:seed": "tsx scripts/db-seed.ts",
+    "db:studio": "prisma studio",
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.12",
+    "@auth/prisma-adapter": "^2.7.3",
     "@hello-pangea/dnd": "^16.5.0",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.8.0",
@@ -42,7 +48,7 @@
     "date-fns": "^3.2.0",
     "framer-motion": "^10.17.9",
     "lucide-react": "^0.303.0",
-    "next": "14.0.4",
+    "next": "^14.2.16",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "qrcode": "^1.5.3",
@@ -51,7 +57,6 @@
     "react-hook-form": "^7.53.1",
     "react-scroll-parallax": "^3.4.5",
     "resend": "^2.1.0",
-    "sharp": "^0.33.5",
     "stripe": "^14.11.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
@@ -81,6 +86,8 @@
     "prisma": "^5.8.0",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
   }
 }
