Changes to be committed: 	modified:   package-lock.json 	modified:   package.json 	renamed:    public/icons/store/app-store.svg -> public/logos/app-store.svg 	renamed:    public/icons/media/apple-music.svg -> public/logos/apple-music.svg 	renamed:    public/icons/social/discord.svg -> public/logos/discord.svg 	renamed:    public/icons/social/facebook.svg -> public/logos/facebook.svg 	renamed:    public/icons/social/github.svg -> public/logos/github.svg 	renamed:    public/icons/store/google-play.svg -> public/logos/google-play.svg 	renamed:    public/icons/social/instagram.svg -> public/logos/instagram.svg 	renamed:    public/icons/social/linkedin.svg -> public/logos/linkedin.svg 	renamed:    public/icons/payment/paypal.svg -> public/logos/paypal.svg 	renamed:    public/icons/social/reddit.svg -> public/logos/reddit.svg 	renamed:    public/icons/media/spotify.svg -> public/logos/spotify.svg 	renamed:    public/icons/social/telegram.svg -> public/logos/telegram.svg 	renamed:    public/icons/social/tiktok.svg -> public/logos/tiktok.svg 	renamed:    public/icons/social/whatsapp.svg -> public/logos/whatsapp.svg 	renamed:    public/icons/social/x.svg -> public/logos/x.svg 	renamed:    public/icons/social/youtube.svg -> public/logos/youtube.svg 	new file:   src/components/qr/logo-selector.tsx 	modified:   src/components/qr/style-editor.tsx 	modified:   src/components/ui/button.tsx 	new file:   src/config/qr-logos.ts 	new file:   src/lib/qr-generator.ts

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
@@ -41,6 +41,7 @@
     "@upstash/ratelimit": "^1.0.0",
     "@upstash/redis": "^1.28.0",
     "bcryptjs": "^2.4.3",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.4",
@@ -69,6 +70,7 @@
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.6",
     "@types/qrcode": "^1.5.5",
