--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "cmdk": "^1.0.4",
     "critters": "^0.0.25",
     "date-fns": "^3.2.0",
-    "framer-motion": "^10.17.9",
+    "framer-motion": "^11.11.11",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.303.0",
-    "next": "^14.2.16",
+    "next": "^15.0.3",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "qrcode": "^1.5.3",
