--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.7.3",
+    "@auth/prisma-adapter": "^2.7.4",
     "@hello-pangea/dnd": "^16.5.0",
     "@hookform/resolvers": "^3.9.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.8.0",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-context-menu": "^2.2.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.1.0",
@@ -57,11 +59,13 @@
     "next-auth": "^4.24.10",
     "next-themes": "^0.2.1",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.1.0",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
     "react-scroll-parallax": "^3.4.5",
+    "recharts": "^2.13.3",
     "resend": "^2.1.0",
     "stripe": "^14.11.0",
     "tailwind-merge": "^2.5.4",
