--- a/package.json
+++ b/package.json
@@ -8,16 +8,37 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "db:init": "tsx scripts/db-init.ts",
     "db:migrate": "prisma migrate deploy",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:seed": "tsx scripts/db-seed.ts",
     "db:studio": "prisma studio",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "analyze": "ANALYZE=true next build",
+    "build:prod": "next build && node scripts/cleanup.js",
+    "start:prod": "next start",
+    "check:unused": "ts-node scripts/analyze-build.ts",
+    "docker:run": "docker run -p 3000:3000 qr-direct",
+    "docker:dev": "docker-compose up",
+    "docker:build:dev": "docker-compose build",
+    "db:init": "tsx scripts/db/init.ts",
+    "db:reset": "tsx scripts/db/reset.ts",
+    "db:seed": "tsx scripts/db/seed.ts",
+    "db:setup": "prisma generate && prisma db push && npm run db:init && npm run db:seed",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "docker:clean": "docker-compose down -v",
+    "docker:db:push": "docker-compose exec app npx prisma db push",
+    "docker:db:generate": "docker-compose exec app npx prisma generate",
+    "docker:db:studio": "docker-compose exec app npx prisma studio",
+    "docker:db:reset": "docker-compose exec app npx prisma migrate reset --force",
+    "docker:shell": "docker-compose exec app sh"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@aws-sdk/client-secrets-manager": "^3.693.0",
+    "@aws-sdk/client-ssm": "^3.693.0",
     "@hello-pangea/dnd": "^16.5.0",
     "@hookform/resolvers": "^3.9.1",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -41,23 +62,25 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-email/components": "^0.0.28",
     "@stripe/stripe-js": "^2.3.0",
     "@upstash/ratelimit": "^1.0.0",
     "@upstash/redis": "^1.28.0",
-    "bcryptjs": "^2.4.3",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "critters": "^0.0.25",
     "date-fns": "^3.2.0",
-    "framer-motion": "^11.11.13",
+    "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.17",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
-    "lucide-react": "^0.303.0",
+    "lucide-react": "^0.460.0",
     "next": "^15.0.3",
-    "next-auth": "^4.24.10",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.16",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.1.0",
     "react": "^18.2.0",
@@ -75,22 +98,27 @@
   "devDependencies": {
     "@aws-amplify/backend": "^0.8.0",
     "@aws-amplify/backend-cli": "^0.9.0",
+    "@next/bundle-analyzer": "^15.0.3",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/classnames": "^2.3.4",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.6",
+    "@types/nodemailer": "^6.4.16",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.20",
     "aws-cdk": "2.110.1",
     "aws-cdk-lib": "2.110.1",
+    "bcryptjs": "^2.4.3",
     "constructs": "^10.3.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14.2.18",
+    "eslint-plugin-next": "^0.0.0",
+    "filesize": "^10.1.6",
     "jest": "^29.7.0",
     "postcss": "^8.4.49",
     "prisma": "^5.8.0",
